# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.8

  - WL#10936, DevAPI: Row locking for Crud.Find.

  - WL#9868, DevAPI: Configuration handling interface.

  - WL#10935, DevAPI: Array or Object "contains" operator.

  - WL#9875, Prepare c/J 8.0 for DEB and RPM builds.

  - Fix for BUG#26259384, CALLABLE STATEMENT GIVES ERROR IN C/JAVA WHEN RUN AGAINST MYSQL 8.0.

  - Fix for Bug#26393132, NULLPOINTEREXCEPTION IS THROWN WHEN TRIED TO DROP A NULL COLLECTION.

  - WL#10532, DevAPI: Cleanup Drop APIs.

  - Fix for Bug#87429 (26633984), repeated close of ServerPreparedStatement causes memory leak.
    Thanks to Eduard Gurskiy for his contribution.

  - Fix for Bug#87379 (26646676), Perform actual TLS capabilities check when restricting TLSv1.2.
    Thanks to Todd Farmer for his contribution.

  - Fix for Bug#85601 (25777822), Unit notation is missing in the description of the property involved in the time.

  - Fix for Bug#87153 (26501245), INCORRECT RESULT OF DBMD.GETVERSIONCOLUMNS() AGAINST MYSQL 8.0.2+.

  - Fix for Bug#78313 (21931572), proxies not handling Object.equals(Object) calls correctly.

  - Fix for Bug#85885 (25874048), resultSetConcurrency and resultSetType are swapped in call to prepareStatement.

  - Fix for Bug#74932 (20066806), ConnectionImp Doesn't Close Server Prepared Statement (PreparedStatement Leak).

  - WL#10536, Deprecating COM_SHUTDOWN.

  - Fix for Bug#25946965, UPDATE THE TIME ZONE MAPPINGS WITH LATEST TZ DATABASES.

  - Fix for Bug#20182108, INCLUDE CUSTOM LOAD BALANCING STRATEGY USING PLUGIN API.
    New load-balancing strategy "serverAffinity" and new connection property "serverAffinityOrder" added.

  - Fix for Bug#26440544, CONNECTOR/J SHOULD NOT USE TX_{READ_ONLY,ISOLATION} WHICH IS PLANNED FOR REMOVAL.

  - Fix for Bug#26399958, UNABLE TO CONNECT TO MYSQL 8.0.3.

  - Fix for Bug#25650305, GETDATE(),GETTIME() AND GETTIMESTAMP() CALL WITH NULL CALENDAR RETURNS NPE.

Version 8.0.7
