@@ -355,6 +355,7 @@ public class PropertyDefinitions {
     public static final String PNAME_sslTrustStoreType = "xdevapi.ssl-truststore-type";
     public static final String PNAME_sslTrustStorePassword = "xdevapi.ssl-truststore-password";
     public static final String PNAME_asyncResponseTimeout = "xdevapi.asyncResponseTimeout";
+    public static final String PNAME_auth = "xdevapi.auth";
 
     public static final String PNAME_enableEscapeProcessing = "enableEscapeProcessing";
 
@@ -940,6 +941,8 @@ public class PropertyDefinitions {
                         Messages.getString("ConnectionProperties.sslTrustStorePassword"), "6.0.6", CATEGORY_XDEVAPI, Integer.MIN_VALUE),
                 new IntegerPropertyDefinition(PNAME_asyncResponseTimeout, 300, RUNTIME_MODIFIABLE,
                         Messages.getString("ConnectionProperties.asyncResponseTimeout"), "8.0.7", CATEGORY_XDEVAPI, Integer.MIN_VALUE),
+                new StringPropertyDefinition(PNAME_auth, DEFAULT_VALUE_NULL_STRING, RUNTIME_NOT_MODIFIABLE, Messages.getString("ConnectionProperties.auth"),
+                        "8.0.8", CATEGORY_XDEVAPI, Integer.MIN_VALUE),
 
                 new BooleanPropertyDefinition(PNAME_enableEscapeProcessing, DEFAULT_VALUE_TRUE, RUNTIME_MODIFIABLE,
                         Messages.getString("ConnectionProperties.enableEscapeProcessing"), "6.0.1", CATEGORY_PERFORMANCE, Integer.MIN_VALUE),
