@@ -907,5 +907,6 @@ ConnectionProperties.sslTrustStoreUrl=URL to the trusted CA certificates key sto
 ConnectionProperties.sslTrustStoreType=Type of the trusted CA certificates key store (NULL or empty means use the default, which is "JKS")
 ConnectionProperties.sslTrustStorePassword=Password for the trusted CA certificates key store
 ConnectionProperties.asyncResponseTimeout=Timeout (in seconds) for getting server response via X Protocol. 
+ConnectionProperties.auth=Authentication mechanism to use with the X Protocol. Allowed values are "MYSQL41", "PLAIN", and "EXTERNAL". Value is case insensitive. If the property is not set, the mechanism is chosen depending on the connection type: "PLAIN" is used for TLS connections and "MYSQL41" is used for unencrypted connections.
 
 PropertyDefinition.1=The connection property ''{0}'' acceptable values are: {1}. The value ''{2}'' is not acceptable.
