@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2015, 2016, Oracle and/or its affiliates. All rights reserved.
+  Copyright (c) 2015, 2017, Oracle and/or its affiliates. All rights reserved.
 
   The MySQL Connector/J is licensed under the terms of the GPLv2
   <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most MySQL Connectors.
@@ -507,7 +507,7 @@ public class XProtocolTest extends InternalXBaseTestCase {
             return;
         }
         assertEquals("mysql", this.protocol.getNodeType());
-        assertFalse(this.protocol.getTls());
+        assertTrue(this.protocol.getTls());
         assertFalse(this.protocol.getClientPwdExpireOk());
         assertTrue(this.protocol.getAuthenticationMechanisms().contains("MYSQL41"));
         assertEquals("text", this.protocol.getDocFormats());
